edits made, still needs repo link

--- a/case-studies/posts/2023/08/21/references.bib
+++ b/case-studies/posts/2023/08/21/references.bib
@@ -296,3 +296,202 @@
   pages = {466--475},
   abstract = {Multi-label text classification (MLTC) aims to tag most relevant labels for the given document. In this paper, we propose a Label-Specific Attention Network (LSAN) to learn a label-specific document representation. LSAN takes advantage of label semantic information to determine the semantic connection between labels and document for constructing label-specific document representation. Meanwhile, the self-attention mechanism is adopted to identify the label-specific document representation from document content information. In order to seamlessly integrate the above two parts, an adaptive fusion strategy is proposed, which can effectively output the comprehensive label-specific document representation to build multi-label text classifier. Extensive experimental results demonstrate that LSAN consistently outperforms the state-of-the-art methods on four different datasets, especially on the prediction of low-frequency labels. The code and hyper-parameter settings are released to facilitate other researchers.},
 }
+
+@INPROCEEDINGS{7953245,
+  author = {Korpusik, M. and Collins, Z. and Glass, J.},
+  booktitle = {2017 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)}, 
+  title = {Semantic mapping of natural language input to database entries via convolutional neural networks}, 
+  year = {2017},
+  volume = {},
+  number = {},
+  pages = {5685-5689},
+  doi = {10.1109/ICASSP.2017.7953245}
+}
+
+@article{DBLP:journals/corr/abs-1802-05365,
+  author = {M. E. Peters and M. Neumann and M. Iyyer and M. Gardner and C. Clark and K. Lee and L. Zettlemoyer},
+  title = {Deep contextualized word representations},
+  journal = {CoRR},
+  volume = {abs/1802.05365},
+  year = {2018},
+  url = {http://arxiv.org/abs/1802.05365},
+  eprinttype = {arXiv},
+  eprint = {1802.05365},
+  timestamp = {Mon, 13 Aug 2018 16:48:54 +0200},
+  biburl = {https://dblp.org/rec/journals/corr/abs-1802-05365.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{radford2018improving,
+  added-at = {2020-07-14T16:37:42.000+0200},
+  author = {Radford, A. and Narasimhan, K. and Salimans, T. and Sutskever, I.},
+  biburl = {https://www.bibsonomy.org/bibtex/273ced32c0d4588eb95b6986dc2c8147c/jonaskaiser},
+  interhash = {5c343ed9a31ac52fd17a898f72af228f},
+  intrahash = {73ced32c0d4588eb95b6986dc2c8147c},
+  keywords = {final thema:transformer},
+  timestamp = {2020-07-14T16:49:42.000+0200},
+  title = {Improving language understanding by generative pre-training},
+  year = 2018,
+  url = {https://s3-us-west-2.amazonaws.com/openai-assets/research-covers/language-unsupervised/language_understanding_paper.pdf}
+}
+
+@inproceedings{NIPS2017_3f5ee243,
+ author = {Vaswani, A. and Shazeer, N. and Parmar, N. and Uszkoreit, J. and Jones, L. and Gomez, A. N. and Kaiser, \L. and Polosukhin, I.},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {I. Guyon and U. Von Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Attention is All you Need},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf},
+ volume = {30},
+ year = {2017}
+}
+
+@inproceedings{NEURIPS2019_dc6a7e65,
+ author = {Yang, Z. and Dai, Z. and Yang, Y. and Carbonell, J. and Salakhutdinov, R. R. and Le, Q. V.},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {XLNet: Generalized Autoregressive Pretraining for Language Understanding},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2019/file/dc6a7e655d7e5840e66733e9ee67cc69-Paper.pdf},
+ volume = {32},
+ year = {2019}
+}
+
+@article{DBLP:journals/corr/abs-1909-11942,
+  author = {Z. Lan and M. Chen and S. Goodman and K. Gimpel and P. Sharma and R. Soricut},
+  title = {{ALBERT:} {A} Lite {BERT} for Self-supervised Learning of Language Representations},
+  journal = {CoRR},
+  volume = {abs/1909.11942},
+  year = {2019},
+  url = {http://arxiv.org/abs/1909.11942},
+  eprinttype = {arXiv},
+  eprint = {1909.11942},
+  timestamp = {Fri, 27 Sep 2019 13:04:21 +0200},
+  biburl = {https://dblp.org/rec/journals/corr/abs-1909-11942.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@INPROCEEDINGS{7078635,
+  author = {Korpusik, M. and Schmidt, N. and Drexler, J. and Cyphers, S. and Glass, J.},
+  booktitle = {2014 IEEE Spoken Language Technology Workshop (SLT)}, 
+  title = {Data collection and language understanding of food descriptions}, 
+  year = {2014},
+  volume = {},
+  number = {},
+  pages = {560-565},
+  doi = {10.1109/SLT.2014.7078635}
+}
+
+@INPROCEEDINGS{7472843,
+  author = {Korpusik, M. and Huang, C. and Price, M. and Glass, J.},
+  booktitle = {2016 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)}, 
+  title = {Distributional semantics for understanding spoken meal descriptions}, 
+  year = {2016},
+  volume = {},
+  number = {},
+  pages = {6070-6074},
+  doi = {10.1109/ICASSP.2016.7472843}
+}
+
+@ARTICLE{7902155,
+  author = {Korpusik, M. and Glass, J.},
+  journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing}, 
+  title = {Spoken Language Understanding for a Nutrition Dialogue System}, 
+  year = {2017},
+  volume = {25},
+  number = {7},
+  pages = {1450-1461},
+  doi = {10.1109/TASLP.2017.2694699}
+  }
+
+@inproceedings{korpusik17_interspeech,
+  author = {M. Korpusik and Z. Collins and J. Glass},
+  title = {{Character-Based Embedding Models and Reranking Strategies for Understanding Natural Language Meal Descriptions}},
+  year = 2017,
+  booktitle = {Proceedings of Interspeech},
+  pages = {3320--3324},
+  doi = {10.21437/Interspeech.2017-422}
+}
+
+@INPROCEEDINGS{8461769,
+  author = {Korpusik, M. and Glass, J.},
+  booktitle = {2018 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)}, 
+  title = {Convolutional Neural Networks and Multitask Strategies for Semantic Mapping of Natural Language Input to a Structured Database}, 
+  year = {2018},
+  volume = {},
+  number = {},
+  pages = {6174-6178},
+  doi = {10.1109/ICASSP.2018.8461769}
+}
+
+@ARTICLE{8721137,
+  author = {Korpusik, M. and Glass, J.},
+  journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing}, 
+  title = {Deep Learning for Database Mapping and Asking Clarification Questions in Dialogue Systems}, 
+  year = {2019},
+  volume = {27},
+  number = {8},
+  pages = {1321-1334},
+  doi = {10.1109/TASLP.2019.2918618}
+}
+
+@inproceedings{korpusik19_interspeech,
+  author = {M. Korpusik and Z. Liu and J. Glass},
+  title = {{A Comparison of Deep Learning Methods for Language Understanding}},
+  year = 2019,
+  booktitle = {Proceedings of Interspeech},
+  pages = {849--853},
+  doi = {10.21437/Interspeech.2019-1262}
+}
+
+@Book{dong_liu,
+  editor = {Dong, G. and Liu, H.},
+  title = {Feature Engineering for Machine Learning and Data Analytics},
+  publisher = {CRC Press},
+  year = {2018},
+  edition = {first edition},
+}
+
+@article{DBLP:journals/corr/abs-1711-05101,
+  author = {I. Loshchilov and F. Hutter},
+  title = {Fixing Weight Decay Regularization in Adam},
+  journal = {CoRR},
+  volume = {abs/1711.05101},
+  year = {2017},
+  url = {http://arxiv.org/abs/1711.05101},
+  eprinttype = {arXiv},
+  eprint = {1711.05101},
+  timestamp = {Mon, 13 Aug 2018 16:48:18 +0200},
+  biburl = {https://dblp.org/rec/journals/corr/abs-1711-05101.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/abs-1908-03265,
+  author = {L. Liu and H. Jiang and P. He and W. Chen and X. Liu and J. Gao and J. Han},
+  title = {On the Variance of the Adaptive Learning Rate and Beyond},
+  journal = {CoRR},
+  volume = {abs/1908.03265},
+  year = {2019},
+  url = {http://arxiv.org/abs/1908.03265},
+  eprinttype = {arXiv},
+  eprint = {1908.03265},
+  timestamp = {Mon, 30 May 2022 13:48:56 +0200},
+  biburl = {https://dblp.org/rec/journals/corr/abs-1908-03265.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/abs-1712-09405,
+  author = {T. Mikolov and E. Grave and P. Bojanowski and C. Puhrsch and A. Joulin},
+  title = {Advances in Pre-Training Distributed Word Representations},
+  journal = {CoRR},
+  volume = {abs/1712.09405},
+  year = {2017},
+  url = {http://arxiv.org/abs/1712.09405},
+  eprinttype = {arXiv},
+  eprint = {1712.09405},
+  timestamp = {Mon, 28 Dec 2020 11:31:02 +0100},
+  biburl = {https://dblp.org/rec/journals/corr/abs-1712-09405.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
