--- a/case-studies/posts/2023/08/21/references.bib
+++ b/case-studies/posts/2023/08/21/references.bib
@@ -495,3 +495,172 @@
   biburl = {https://dblp.org/rec/journals/corr/abs-1712-09405.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{10.1257/jel.20171350,
+  Author = {Christensen, G. and Miguel, E.},
+  Title = {Transparency, Reproducibility, and the Credibility of Economics Research},
+  Journal = {Journal of Economic Literature},
+  Volume = {56},
+  Number = {3},
+  Year = {2018},
+  Month = {September},
+  Pages = {920-80},
+  DOI = {10.1257/jel.20171350},
+  URL = {https://www.aeaweb.org/articles?id=10.1257/jel.20171350}
+}
+
+@book{DBLP:books/sp/ChristenRS20,
+  author = {P. Christen and T. Ranbaduge and R. Schnell},
+  title = {Linking Sensitive Data - Methods and Techniques for Practical Privacy-Preserving Information Sharing},
+  publisher = {Springer},
+  year = {2020},
+  url = {https://doi.org/10.1007/978-3-030-59706-1},
+  doi = {10.1007/978-3-030-59706-1},
+  isbn = {978-3-030-59705-4},
+  timestamp = {Fri, 30 Oct 2020 13:49:37 +0100},
+  biburl = {https://dblp.org/rec/books/sp/ChristenRS20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/abs-2112-01716,
+  author = {B. Koch and E. Denton and A. Hanna and J. G. Foster},
+  title = {Reduced, Reused and Recycled: The Life of a Dataset in Machine Learning Research},
+  journal = {CoRR},
+  volume = {abs/2112.01716},
+  year = {2021},
+  url = {https://arxiv.org/abs/2112.01716},
+  eprinttype = {arXiv},
+  eprint = {2112.01716},
+  timestamp = {Tue, 07 Dec 2021 12:15:54 +0100},
+  biburl = {https://dblp.org/rec/journals/corr/abs-2112-01716.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{43146,
+  title	= {Machine Learning: The High Interest Credit Card of Technical Debt},
+  author	= {D. Sculley and G. Holt and D. Golovin and E. Davydov and T. Phillips and D. Ebner and V. Chaudhary and M. Young},
+  year	= {2014},
+  booktitle	= {SE4ML: Software Engineering for Machine Learning (NIPS 2014 Workshop)}
+}
+
+@article{10.1371/journal.pone.0249833,
+  doi = {10.1371/journal.pone.0249833},
+  author = {Schafer, K. M. and Kennedy, G. and Gallyer, A. and Resnik, P.},
+  journal = {PLOS ONE},
+  publisher = {Public Library of Science},
+  title = {A direct comparison of theory-driven and machine learning prediction of suicide: A meta-analysis},
+  year = {2021},
+  month = {04},
+  volume = {16},
+  url = {https://doi.org/10.1371/journal.pone.0249833},
+  pages = {1--23},
+  number = {4}
+}
+
+@article{10.1007/s11222-017-9746-6,
+  author = {Hand, D. and Christen, P.},
+  title = {A Note on Using the F-Measure for Evaluating Record Linkage Algorithms},
+  year = {2018},
+  issue_date = {May 2018},
+  publisher = {Kluwer Academic Publishers},
+  address = {USA},
+  volume = {28},
+  number = {3},
+  issn = {0960-3174},
+  url = {https://doi.org/10.1007/s11222-017-9746-6},
+  doi = {10.1007/s11222-017-9746-6},
+  abstract = {Record linkage is the process of identifying and linking records about the same entities from one or more databases. Record linkage can be viewed as a classification problem where the aim is to decide whether a pair of records is a match (i.e. two records refer to the same real-world entity) or a non-match (two records refer to two different entities). Various classification techniques--including supervised, unsupervised, semi-supervised and active learning based--have been employed for record linkage. If ground truth data in the form of known true matches and non-matches are available, the quality of classified links can be evaluated. Due to the generally high class imbalance in record linkage problems, standard accuracy or misclassification rate are not meaningful for assessing the quality of a set of linked records. Instead, precision and recall, as commonly used in information retrieval and machine learning, are used. These are often combined into the popular F-measure, which is the harmonic mean of precision and recall. We show that the F-measure can also be expressed as a weighted sum of precision and recall, with weights which depend on the linkage method being used. This reformulation reveals that the F-measure has a major conceptual weakness: the relative importance assigned to precision and recall should be an aspect of the problem and the researcher or user, but not of the particular linkage method being used. We suggest alternative measures which do not suffer from this fundamental flaw.},
+  journal = {Statistics and Computing},
+  month = {may},
+  pages = {539--547},
+  numpages = {9},
+  keywords = {Class imbalance, Classification, Precision, Recall, Data linkage, Entity resolution}
+}
+
+@article{4138bca6-f7b7-3af8-a96c-5e2544823c5c,
+ ISSN = {02768739, 15206688},
+ URL = {http://www.jstor.org/stable/41653827},
+ abstract = {Innovation inducement prizes have been used for centuries. In the United States, a recent federal policy change—the America COMPETES Reauthorization Act of 2010—clarified and simplified a path by which all federal agencies can offer innovation inducement prizes, thus intensifying interest in how government agencies can most effectively design and apply such prizes. This paper aims to review and synthesize the academic literature on innovation inducement prizes, to clarify what has been learned that is relevant to current policy discussions, and to highlight unresolved questions that would be fruitful areas for future academic research and policy experimentation. Relative to the existing literature, this paper aims to bridge two gaps. First, I synthesize the academic literature in this area with an eye toward drawing lessons for the types of innovation inducement prizes under consideration by federal agencies under the America COMPETES Reauthorization Act. Second, I discuss the problem of how to evaluate the success or failure of innovation inducement prizes, arguing that careful empirical evaluations of innovation inducement prizes are needed in order to provide guidance to federal agencies (and others) on how to most effectively apply and design innovation inducement prizes.},
+ author = {H. Williams},
+ journal = {Journal of Policy Analysis and Management},
+ number = {3},
+ pages = {752--776},
+ publisher = {Wiley},
+ title = {Innovation inducement prizes: Connecting research to policy},
+ urldate = {2023-08-21},
+ volume = {31},
+ year = {2012}
+}
+
+@inproceedings{macavaney-etal-2021-community,
+  title = {Community-level Research on Suicidality Prediction in a Secure Environment: Overview of the {CLP}sych 2021 Shared Task},
+  author = {MacAvaney, S. and Mittu, A. and Coppersmith, G. and Leintz, J. and Resnik, P.},
+  booktitle = {Proceedings of the Seventh Workshop on Computational Linguistics and Clinical Psychology: Improving Access},
+  month = jun,
+  year = {2021},
+  address = {Online},
+  publisher = {Association for Computational Linguistics},
+  url = {https://aclanthology.org/2021.clpsych-1.7},
+  doi = {10.18653/v1/2021.clpsych-1.7},
+  pages = {70--80},
+}
+
+@inproceedings{tsakalidis-etal-2022-overview,
+  title = {Overview of the {CLP}sych 2022 Shared Task: Capturing Moments of Change in Longitudinal User Posts},
+  author = {Tsakalidis, A. and Chim, J. and Bilal, I. M. and Zirikly, A. and Atzil-Slonim, D. and Nanni, F. and Resnik, P. and Gaur, M. and Roy, K. and Inkster, B. and Leintz, J. and Liakata, M.},
+  booktitle = {Proceedings of the Eighth Workshop on Computational Linguistics and Clinical Psychology},
+  month = jul,
+  year = {2022},
+  address = {Seattle, USA},
+  publisher = {Association for Computational Linguistics},
+  url = {https://aclanthology.org/2022.clpsych-1.16},
+  doi = {10.18653/v1/2022.clpsych-1.16},
+  pages = {184--198}
+}
+
+@article{10.1145/3433638,
+  author = {Domingo-Ferrer, J. and S\'{a}nchez, D. and Blanco-Justicia, A.},
+  title = {The Limits of Differential Privacy (and Its Misuse in Data Release and Machine Learning)},
+  year = {2021},
+  issue_date = {July 2021},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {64},
+  number = {7},
+  issn = {0001-0782},
+  url = {https://doi.org/10.1145/3433638},
+  doi = {10.1145/3433638},
+  abstract = {Differential privacy is not a silver bullet for all privacy problems.},
+  journal = {Communications of the ACM},
+  month = {jun},
+  pages = {33--35},
+  numpages = {3}
+}
+
+@inproceedings{van_riper,
+  title = {Differential Privacy and Racial Residential Segregation},
+  author = {D. {Van Riper} and T. Kugler and J. Schroeder and S. Ruggles},
+  booktitle = {2020 APPAM Fall Research Conference},
+  year = {2020},
+}
+
+@article{10.1257/pandp.20191107,
+  Author = {Ruggles, S. and Fitch, C. and Magnuson, D. and Schroeder, J.},
+  Title = {Differential Privacy and Census Data: Implications for Social and Economic Research},
+  Journal = {AEA Papers and Proceedings},
+  Volume = {109},
+  Year = {2019},
+  Month = {May},
+  Pages = {403-08},
+  DOI = {10.1257/pandp.20191107},
+  URL = {https://www.aeaweb.org/articles?id=10.1257/pandp.20191107}
+}
+
+@misc{giles2022faking,
+  title = {Faking feature importance: A cautionary tale on the use of differentially-private synthetic data}, 
+  author = {O. Giles and K. Hosseini and G. Mingas and O. Strickson and L. Bowler and C. {Rangel Smith} and H. Wilde and J. {Ning Lim} and B. Mateen and K. Amarasinghe and R. Ghani and A. Heppenstall and N. Lomax and N. Malleson and M. O'Reilly and S. Vollmerteke},
+  year = {2022},
+  eprint = {2203.01363},
+  archivePrefix = {arXiv},
+  primaryClass = {cs.LG}
+}
