ready to publish

--- a/case-studies/posts/2023/08/21/01-purchase-to-plate.qmd
+++ b/case-studies/posts/2023/08/21/01-purchase-to-plate.qmd
@@ -32,7 +32,7 @@ The PPS combines data sets to enhance research related to the economics of food 
 -	Purchase to Plate National Average Prices (PP-NAP) for the National Health and Nutrition Examination Survey (NHANES), and 
 -	Purchase to Plate Ingredient Tool (PPIT).
 
-The PPC allows researchers to measure the healthfulness of store purchases. On average [US consumers acquire about 75% of their calories from retail stores](https://www.ers.usda.gov/data-products/foodaps-national-household-food-acquisition-and-purchase-survey/summary-findings/#calories), and there are a number of studies linking the availability of foods at home to the healthfulness of the overall diet (e.g. @gattshall_et_al_2008 and @hanson_et_al_2005). Thus, understanding the healthfulness of store purchases allows us to understand differences in consumers who purchase healthy versus less healthy foods, and may contribute to better policies that promote healthier food purchases. While healthier diets are linked to a lower risk of disease outcomes [@REEDY2014881], other factors such as health care access may also be contributors [@cleary_et_al_2022]. The PPC also forms the basis of the price tool, PPPT – which allows researchers to estimate custom prices for dietary recall studies – and a new ERS data product, the [PP-NAP](https://www.ers.usda.gov/data-products/purchase-to-plate/). The national average prices from PP-NAP are used in reevaluating the TFP. By using the PP-NAP with 24-hour dietary recall information from surveys such as What We Eat in America ([WWEIA](https://www.ars.usda.gov/northeast-area/beltsville-md-bhnrc/beltsville-human-nutrition-research-center/food-surveys-research-group/docs/wweianhanes-overview/)) -- the dietary component of the nationally representative [National Health and Nutrition Examination Survey](https://www.cdc.gov/nchs/nhanes/index.htm)(NHANES)[^1] -- researchers can examine the relationship between the cost of food, dietary intake, and chronic diseases linked to poor diets. The price estimates also allow researchers to develop cost-effective healthy diets such as [MyPlate Kitchen](https://www.myplate.gov/myplate-kitchen/recipes). The final component of the Purchase to Plate Suite, the ingredient tool (PPIT), breaks dietary recall-reported foods back into purchasable ingredients, based on US retail food purchases. The PPIT is also used in the revaluation of the TFP, and by researchers who want to look at the relationship between reported ingestion of grocery items, cost and disease outcomes using WWEIA/NHANES. More information on the development of the PPC is available in two papers by Carlson et al. [-@carlson_et_al_2019; -@carlson_et_al_2022].
+The PPC allows researchers to measure the healthfulness of store purchases. On average [US consumers acquire about 75% of their calories from retail stores](https://www.ers.usda.gov/data-products/foodaps-national-household-food-acquisition-and-purchase-survey/summary-findings/#calories), and there are a number of studies linking the availability of foods at home to the healthfulness of the overall diet [e.g., @gattshall_et_al_2008; @hanson_et_al_2005]. Thus, understanding the healthfulness of store purchases allows us to understand differences in consumers who purchase healthy versus less healthy foods, and may contribute to better policies that promote healthier food purchases. While healthier diets are linked to a lower risk of disease outcomes [@REEDY2014881], other factors such as health care access may also be contributors [@cleary_et_al_2022]. The PPC also forms the basis of the price tool, PPPT – which allows researchers to estimate custom prices for dietary recall studies – and a new ERS data product, the [PP-NAP](https://www.ers.usda.gov/data-products/purchase-to-plate/). The national average prices from PP-NAP are used in reevaluating the TFP. By using the PP-NAP with 24-hour dietary recall information from surveys such as What We Eat in America ([WWEIA](https://www.ars.usda.gov/northeast-area/beltsville-md-bhnrc/beltsville-human-nutrition-research-center/food-surveys-research-group/docs/wweianhanes-overview/)) -- the dietary component of the nationally representative [National Health and Nutrition Examination Survey](https://www.cdc.gov/nchs/nhanes/index.htm)(NHANES)[^1] -- researchers can examine the relationship between the cost of food, dietary intake, and chronic diseases linked to poor diets. The price estimates also allow researchers to develop cost-effective healthy diets such as [MyPlate Kitchen](https://www.myplate.gov/myplate-kitchen/recipes). The final component of the Purchase to Plate Suite, the ingredient tool (PPIT), breaks dietary recall-reported foods back into purchasable ingredients, based on US retail food purchases. The PPIT is also used in the revaluation of the TFP, and by researchers who want to look at the relationship between reported ingestion of grocery items, cost and disease outcomes using WWEIA/NHANES. More information on the development of the PPC is available in two papers by Carlson et al. [-@carlson_et_al_2019; -@carlson_et_al_2022].
 
 [^1]: NHANES is a multi-module continuous survey conducted by the Centers for Disease Control and Prevention. In addition to the WWEIA, NHANES includes a four-hour complete medical exam including a health history, and a blood and urine analysis.
 
