--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,13 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!data-science-and-games.qmd"
+    - "!00-food-for-thought.qmd"
+    - "!01-purchase-to-plate.qmd"
+    - "!02-competition-design.qmd"
+    - "!03-first-place-winners.qmd"
+    - "!04-second-place-winners.qmd"
+    - "!05-third-place-winners.qmd"
+    - "!06-value-of-competitions.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -37,17 +43,17 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  # - id: ideas
-  #   contents: 
-  #   - /ideas
-  #   - "!index.qmd"
-  #   sort: "date desc"
-  #   type: grid
-  #   categories: false
-  #   sort-ui: false
-  #   filter-ui: false
-  #   max-items: 3
-  #   feed: false
+  - id: ideas
+    contents: 
+    - /ideas
+    - "!index.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
 
   - id: careers
     contents: 
@@ -75,9 +81,21 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  # - id: editors-blog
+  - id: editors-blog
+    contents: 
+    - /viewpoints/editors-blog
+    - "!index.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
+
+  # - id: datasciencebites
   #   contents: 
-  #   - /viewpoints/editors-blog
+  #   - /ideas/datasciencebites
   #   - "!index.qmd"
   #   sort: "date desc"
   #   type: grid
@@ -87,30 +105,18 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  - id: datasciencebites
-    contents: 
-    - /ideas/datasciencebites
-    - "!index.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
-
-  - id: interviews
-    contents: 
-    - /viewpoints/interviews
-    - "!index.qmd"
-    - "!london-data-week.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
+  # - id: interviews
+  #   contents: 
+  #   - /viewpoints/interviews
+  #   - "!index.qmd"
+  #   - "!london-data-week.qmd"
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
 
   - id: career-profiles
     contents: 
@@ -128,15 +134,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/posts/2023/08/17/data-science-and-games.qmd">
+<a href="/case-studies/posts/2023/08/21/00-food-for-thought.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Where do AI, data science, and computer games intersect?
-Game studios have cemented their place among the fastest-growing media industries. Alice-Maria Toader and Liam Brierley report on two recent talks that explore the role of AI and data science in video game development.
+## Food for Thought: Using AI to support food and nutrition policy
+To develop healthy diet plans, policy makers need to know what foods people are buying and the nutritional content of those foods -- but that information is in separate datasets. Can machine learning link them together? That question inspired a competition. A new collection of articles tells the full story.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/posts/2023/08/17/images/sega-store.png)
+![](case-studies/posts/2023/08/21/images/05-lm.png)
 :::
 :::
 
@@ -171,11 +177,11 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## Despite some stumbles, OpenAI’s 'junior programmer' presents a real step forward in the ChatGPT offering. At this stage, I would argue that Code Interpreter may be useful for quick summaries, visualisations and a little basic data cleaning and some preliminary investigations. However, based on what I’ve seen so far, it is clear to me that highly trained statisticians won’t be replaced anytime soon.
-Real World Data Science takes ChatGPT's Code Interpreter for a test drive 
+## We have a plethora of jobs that we cannot fill in data science at the moment. We’ve had all sorts of initiatives in terms of trying to retrain people... but unless we get that pipeline coming through [from schools], we’re always going to have this problem at the top. Data is everywhere – in every single thing that we do, in all of our walks of life... so there is absolutely no reason why we can’t excite children in a career in data science.
+Rachel Hilliam calls for data science outreach in schools 
 
 ::: {.button}
-[Explore the demo](viewpoints/editors-blog/posts/2023/07/19/code-interpreter.qmd)
+[Watch the lecture](viewpoints/editors-blog/posts/2023/07/27/schools-outreach.qmd)
 :::
 
 :::
@@ -184,14 +190,43 @@ Real World Data Science takes ChatGPT's Code Interpreter for a test drive
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="ideas/datasciencebites/index.qmd">
+<a href="ideas/index.qmd">
 
-## Data Science Bites
+## Data Science Ideas
 </a> 
 
-::: {#datasciencebites}
+::: {#ideas}
 :::
 
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+<a href="viewpoints/editors-blog/index.qmd">
+
+## Editors' blog 
+</a>
+
+::: {#editors-blog}
+:::
+
+:::
+:::
+
+::: {.pullout-text}
+::: {.pullout-container}
+::: {.pullout-block .black-background}
+![](images/quote-purple.png){width="100px"}
+
+## Despite some stumbles, OpenAI’s 'junior programmer' presents a real step forward in the ChatGPT offering. At this stage, I would argue that Code Interpreter may be useful for quick summaries, visualisations and a little basic data cleaning and some preliminary investigations. However, based on what I’ve seen so far, it is clear to me that highly trained statisticians won’t be replaced anytime soon.
+Real World Data Science takes ChatGPT's Code Interpreter for a test drive 
+
+::: {.button}
+[Explore the demo](viewpoints/editors-blog/posts/2023/07/19/code-interpreter.qmd)
+:::
+
+:::
 :::
 :::
 
@@ -208,22 +243,6 @@ Real World Data Science takes ChatGPT's Code Interpreter for a test drive
 :::
 :::
 
-::: {.pullout-text}
-::: {.pullout-container}
-::: {.pullout-block .black-background}
-![](images/quote-purple.png){width="100px"}
-
-## To ensure the safe and responsible use of AI, the focus moving forward needs to be on the operationalisation of AI ethics into the day-to-day development lifecycle. But, what does this look like in practice? And how might you get started as an ethical AI practitioner? In this article, we unpack these questions and give you, the data scientist, a foundation to begin your journey towards trusted AI.
-How to translate AI ethics from theory into practice, by Maxine Setiawan and Mira Pijselman
-
-::: {.button}
-[Learn more about Trusted AI](ideas/posts/2023/07/03/trusted-AI.qmd)
-:::
-
-:::
-:::
-:::
-
 ::: {.content-container}
 ::: {.listing-block}
 <a href="careers/career-profiles/index.qmd">
@@ -232,19 +251,6 @@ How to translate AI ethics from theory into practice, by Maxine Setiawan and Mir
 </a>
 
 ::: {#career-profiles}
-:::
-
-:::
-:::
-
-::: {.content-container}
-::: {.listing-block}
-<a href="viewpoints/interviews/index.qmd">
-
-## Interviews 
-</a>
-
-::: {#interviews}
 :::
 
 :::
