--- a/case-studies/posts/2023/08/21/03-first-place-winners.qmd
+++ b/case-studies/posts/2023/08/21/03-first-place-winners.qmd
@@ -115,7 +115,7 @@ Just by building the ranking using the cosine similarities between each IRI item
 Our current method only uses the data readily available from the 2017--2018 dataset, which we acknowledge is intended for testing. To remedy this, we further split this dataset into train/test sets and report results on our unseen test subset for our primary performance metrics. This gives a decent look into how the model will perform on unseen data.
 
 ::: {.callout-note appearance="simple"}
-Find the code in the [Real World Data Science GitHub repository](link).
+Find the code in the [Real World Data Science GitHub repository](https://github.com/realworlddatascience/realworlddatascience.github.io/tree/main/case-studies/posts/2023/08/21/_code).
 :::
 
 ## Our results 
