--- a/case-studies/posts/2023/08/21/04-second-place-winners.qmd
+++ b/case-studies/posts/2023/08/21/04-second-place-winners.qmd
@@ -45,7 +45,7 @@ We ensemble the base-string match and BERT models. BERT is a deep learning model
 :::
 
 ::: {.callout-note style="margin-top: 2rem;" appearance="simple"}
-Find the code in the [Real World Data Science GitHub repository](link).
+Find the code in the [Real World Data Science GitHub repository](https://github.com/realworlddatascience/realworlddatascience.github.io/tree/main/case-studies/posts/2023/08/21/_code).
 :::
 
 ## Our results 
