--- a/case-studies/posts/2023/08/21/05-third-place-winners.qmd
+++ b/case-studies/posts/2023/08/21/05-third-place-winners.qmd
@@ -53,7 +53,7 @@ Finally, we needed a GPU in order to efficiently train our BERT models. However,
 To deal with the inability to run jobs in the background, our process was checkpointing our models every five batches, and saving the model predictions during evaluation to a csv file every five batches as well.
 
 ::: {.callout-note appearance="simple"}
-Find the code in the [Real World Data Science GitHub repository](link).
+Find the code in the [Real World Data Science GitHub repository](https://github.com/realworlddatascience/realworlddatascience.github.io/tree/main/case-studies/posts/2023/08/21/_code).
 :::
 
 ## Our results
