--- a/case-studies/posts/2023/08/21/02-competition-design.qmd
+++ b/case-studies/posts/2023/08/21/02-competition-design.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Food for Thought: Competition and challenge design"
 description: |
-  From structure to setup, to metrics, results, and lessons learned, Zheyuan Zhang and Uyen Le give an overview of the design of the Food for Thought Competition.       
+  From structure to setup, to metrics, results, and lessons learned, Zheyuan Zhang and Uyen Le give an overview of the design of the Food for Thought competition.       
 categories:
   - Machine learning
   - Natural language processing
