--- a/index.qmd
+++ b/index.qmd
@@ -81,17 +81,17 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  - id: editors-blog
-    contents: 
-    - /viewpoints/editors-blog
-    - "!index.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
+  # - id: editors-blog
+  #   contents: 
+  #   - /viewpoints/editors-blog
+  #   - "!index.qmd"
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
 
   # - id: datasciencebites
   #   contents: 
@@ -105,18 +105,18 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  # - id: interviews
-  #   contents: 
-  #   - /viewpoints/interviews
-  #   - "!index.qmd"
-  #   - "!london-data-week.qmd"
-  #   sort: "date desc"
-  #   type: grid
-  #   categories: false
-  #   sort-ui: false
-  #   filter-ui: false
-  #   max-items: 3
-  #   feed: false
+  - id: interviews
+    contents: 
+    - /viewpoints/interviews
+    - "!index.qmd"
+    - "!london-data-week.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
 
   - id: career-profiles
     contents: 
@@ -203,12 +203,12 @@ Rachel Hilliam calls for data science outreach in schools
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/editors-blog/index.qmd">
+<a href="viewpoints/interviews/index.qmd">
 
-## Editors' blog 
+## Interviews 
 </a>
 
-::: {#editors-blog}
+::: {#interviews}
 :::
 
 :::
