Fix headline text styling

--- a/viewpoints/editors-blog/posts/2023/08/24/rss-conference.qmd
+++ b/viewpoints/editors-blog/posts/2023/08/24/rss-conference.qmd
@@ -1,7 +1,7 @@
 ---
-title: "RSS Conference Preview: Evaluating AI, machine learning, and data visualisation"
+title: "RSS Conference preview: Evaluating AI, machine learning, and data visualisation"
 description: |
-  Heading to RSS Conference in Harrogate this September? Here's a selection of sessions to add to your  schedule.
+  Heading to RSS Conference in Harrogate this September? Here's a selection of sessions to add to your schedule.
 categories:
   - AI
   - Machine learning
@@ -56,7 +56,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "RSS Conference Preview: Evaluating AI, machine learning, and data visualisation." Real World Data Science, August 24, 2023. [URL](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/08/24/rss-conference.html)
+: Tarran, Brian. 2023. "RSS Conference preview: Evaluating AI, machine learning, and data visualisation." Real World Data Science, August 24, 2023. [URL](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/08/24/rss-conference.html)
 :::
 :::
 :::
