--- a/viewpoints/editors-blog/posts/2023/08/24/rss-conference.qmd
+++ b/viewpoints/editors-blog/posts/2023/08/24/rss-conference.qmd
@@ -16,7 +16,7 @@ image-alt: Exterior photo of the Harrogate Convention Centre.
 The Royal Statistical Society International Conference takes place in Harrogate, England, this September (Monday 4 to Thursday 7). Real World Data Science will be in attendance, and we've helped organise a couple of sessions we'd like to tell you about.
 
 ### Evaluating AI: How data science and statistics can shape the UK's AI strategy 
-**Date:** 6 September **Time:** 9:00 am - 10:20 am **Room:** Queens Suite 8
+**Date:** 6 September **Time:** 9:00 am - 10:20 am **Room:** Auditorium (moved from Queens Suite 8)
 
 The launch of ChatGPT less than a year ago is a milestone moment in the story of artificial intelligence. Overnight, large language models were transformed from research projects into consumer products, now used by millions each month. [The capabilities are impressive](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/07/19/code-interpreter.html), [the productivity gains undeniable](https://realworlddatascience.net/careers/posts/2023/05/11/chatgpt-data-science-pt1.html). But, what of the downsides? These are issues [societies, governments, and individuals are now starting to reckon with](https://realworlddatascience.net/viewpoints/interviews/posts/2023/04/28/stephanie-hare.html).
 
